--- a/View/public_html/WEB-INF/web.xml
+++ b/View/public_html/WEB-INF/web.xml
@@ -56,8 +56,8 @@
     <filter-class>org.apache.myfaces.trinidad.webapp.TrinidadFilter</filter-class>
   </filter>
   <filter>
-    <filter-name>ServletADFFilter</filter-name>
-    <filter-class>oracle.adf.share.http.ServletADFFilter</filter-class>
+    <filter-name>adfBindings</filter-name>
+    <filter-class>oracle.adf.model.servlet.ADFBindingFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>trinidad</filter-name>
@@ -67,7 +67,7 @@
     <dispatcher>ERROR</dispatcher>
   </filter-mapping>
   <filter-mapping>
-    <filter-name>ServletADFFilter</filter-name>
+    <filter-name>adfBindings</filter-name>
     <servlet-name>Faces Servlet</servlet-name>
     <dispatcher>FORWARD</dispatcher>
     <dispatcher>REQUEST</dispatcher>
@@ -134,4 +134,16 @@
   <welcome-file-list>
     <welcome-file>/faces/home.jsf</welcome-file>
   </welcome-file-list>
+  <listener>
+    <listener-class>oracle.adf.mbean.share.connection.ADFConnectionLifeCycleCallBack</listener-class>
+  </listener>
+  <listener>
+    <listener-class>oracle.adf.mbean.share.config.ADFConfigLifeCycleCallBack</listener-class>
+  </listener>
+  <ejb-local-ref>
+    <ejb-ref-name>ejb/local/SessionBakumEJB</ejb-ref-name>
+    <ejb-ref-type>Session</ejb-ref-type>
+    <local>ua.bakum.aa.model.session.SessionBakumEJBLocal</local>
+    <ejb-link>SessionBakumEJB</ejb-link>
+  </ejb-local-ref>
 </web-app>
